--- a/oscar/templates/checkout/payment_details.html
+++ b/oscar/templates/checkout/payment_details.html
@@ -15,9 +15,37 @@ Payment details | {{ block.super }}
 
 {% block payment_details %}
 <div class="sub-header">
-	<h2>Payment details</h2>
+	<h2>How would you like to pay?</h2>
 </div>
-<p>This is where a bankcard form might appear.</p>
+<div class="sub-header">
+	<h4>Use an existing card</h4>
+</div>
+	<div class="controls">
+		<label class="radio">
+			<input id="optionsRadios1" type="radio" checked="" value="option1" name="optionsRadios"><strong>Credit Card</strong> - Recommended
+		</label>
+	</div>
+	<div class="choose_card">
+        <ul>
+			<li>
+				<div class="well well-info">
+					<form action="" method="post">
+						<input type="submit" value="Choose this card" class="btn btn-primary btn-small ship-address"/>
+					</form>
+
+					<form action="" method="post" class="delete_address">
+						<a class="btn btn-small btn-info" href="">Edit</a>
+						<input type="submit" value="Delete" class="btn btn-small btn-danger" />
+					</form>
+				</div>
+			</li>
+        </ul>
+    </div>
+	<div class="sub-header">
+		<h4>Or, use a new card</h4>
+	</div>
+	<div class="row-fluid">
+		
 	<form method="post" action="{% url checkout:preview %}">
     {% csrf_token %}
 	<div class="well">
