--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -18,51 +18,73 @@ Checkout | {{ block.super }}
 <div class="sub-header">
     <h3>Order contents</h3>
 </div>
-
-<table class="table table-striped table-bordered">
-    <tr>
-        <th>Product</th>
-        <th>Availability</th>
-        <th>Quantity</th>
-        <th>Unit price excl tax</th>
-        <th>Unit price tax</th>
-        <th>Line price excl tax</th>
-        <th>Line price incl tax</th>
-    </tr>
-    {% for line in basket.lines.all %}
-    <tr>
-        <td><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></td>
-        <td>{{ line.product.stockrecord.availability }}</td>
-        <td>{{ line.quantity }}</td>
-        <td>{{ line.unit_price_excl_tax|currency }}</td>
-        <td>{{ line.unit_tax|currency }}</td>
-        <td>{{ line.line_price_excl_tax|currency }}</td>
-        <td>{{ line.line_price_incl_tax|currency }}</td>
-    </tr>
-    {% endfor %}
-    {% for discount in basket.discounts %}
-    <tr>
-        <td colspan="6">{{ discount.name }}</td>
-        <td colspan="6">-{{ discount.discount|currency }}</td>
-    </tr>
-    {% endfor %}
-    <tr>
-        <td colspan="5">Basket total</td>
-        <td>{{ basket.total_excl_tax|currency }}</td>
-        <td>{{ basket.total_incl_tax|currency }}</td>
-    </tr>
-    {% if shipping_total_excl_tax %}
-    <tr>
-        <td colspan="5">Shipping charge</td>
-        <td>{{ shipping_total_excl_tax|currency }}</td>
-        <td>{{ shipping_total_incl_tax|currency }}</td>
-    </tr>
-    {% endif %}
-    <tr>
-        <td colspan="6">Order total</td>
-        <td>{{ order_total_incl_tax|currency }}</td>
-    </tr>
-</table>
+<div class="basket-title">
+    <div class="row-fluid">
+        <h4 class="span10">Items Summary</h4>
+        <h4 class="span1">Quantity</h4>
+        <h4 class="span1">Price</h4>
+    </div>
+</div>
+{% for line in basket.lines.all %}
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span10">
+            <h4><a href="{{ line.product.get_absolute_url }}">{{ line.description }}</a></h4>
+            <p class="app-ico instock avaliability ">{{ line.product.stockrecord.availability }}</p>
+        </div>
+        <div class="span1">
+            <p>{{ line.quantity }}<p>
+        </div>
+        <div class="span1">
+            <p class="price">{{ line.line_price_incl_tax|currency }}</p>
+        </div>        
+    </div>
+</div>
+{% endfor %}
+{% for discount in basket.discounts %}
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span11">
+            <h4>{{ discount.name }}</h4>
+        </div>
+        <div class="span1">
+            <p>-{{ discount.discount|currency }}</p>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% if shipping_total_excl_tax %}
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span11">
+            <h4>Shipping charge</h4>
+        </div>
+        <div class="span1">
+            <p>{{ shipping_total_incl_tax|currency }}</p>
+        </div>
+    </div>
+</div>
+{% endif %}
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span11">
+            <h4>Basket total</h4>
+        </div>
+        <div class="span1">
+            <p>{{ basket.total_incl_tax|currency }}</p>
+        </div>
+    </div>
+</div>
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span11">
+            <h4>Order total</h4>
+        </div>
+        <div class="span1">
+            <p>{{ order_total_incl_tax|currency }}</p>
+        </div>
+    </div>
+</div>
 <div class="form-actions">
     <a href="{% url basket:summary %}" class="btn">Edit order contents</a>
 </div>
