--- a/oscar/templates/checkout/payment_details.html
+++ b/oscar/templates/checkout/payment_details.html
@@ -6,7 +6,7 @@ Payment details | {{ block.super }}
 {% endblock %}
 
 {% block checkout-nav %}
-{% include 'checkout/nav.html' with step=4 %}
+{% include 'checkout/nav.html' with step=3 %}
 {% endblock %}
 
 {% block order_contents %}{% endblock %}
@@ -20,6 +20,7 @@ Payment details | {{ block.super }}
 <div class="sub-header">
 	<h4>Use an existing card</h4>
 </div>
+<div class="well form-inline">
 	<div class="controls">
 		<label class="radio">
 			<input id="optionsRadios1" type="radio" checked="" value="option1" name="optionsRadios"><strong>Credit Card</strong> - Recommended
@@ -28,7 +29,8 @@ Payment details | {{ block.super }}
 	<div class="choose_card">
         <ul>
 			<li>
-				<div class="well well-info">
+				<form method="post" action="{% url checkout:preview %}">
+			    {% csrf_token %}
 					<form action="" method="post">
 						<input type="submit" value="Choose this card" class="btn btn-primary btn-small ship-address"/>
 					</form>
@@ -37,20 +39,44 @@ Payment details | {{ block.super }}
 						<a class="btn btn-small btn-info" href="">Edit</a>
 						<input type="submit" value="Delete" class="btn btn-small btn-danger" />
 					</form>
-				</div>
+				</form>
 			</li>
         </ul>
     </div>
+</div>
+<form class="well well-info">
 	<div class="sub-header">
-		<h4>Or, use a new card</h4>
+		<div class="controls">
+			<label class="radio">
+				<input id="optionsRadios1" type="radio" checked="" value="option1" name="optionsRadios"><strong>Or use a new card</strong>
+			</label>
+		</div>
 	</div>
 	<div class="row-fluid">
-		
-	<form method="post" action="{% url checkout:preview %}">
+		<div class="span6">
+			<label>Card Number</label>
+			<input type="text" class="span10" placeholder="Card number">
+			<label>Expiry Date</label>
+			<input type="text" class="span5" placeholder="month">
+			/
+			<input type="text" class="span5" placeholder="year">
+			<label>CV2</label>
+			<input type="text" class="span10" placeholder="Last 3 digit on your card">
+		</div>
+		<div class="span6">
+			<label>Name on Card</label>
+			<input type="text" placeholder="Your name...">
+		</div>
+	</div>
+</form>
+
+
+
+	<!-- <form method="post" action="{% url checkout:preview %}">
     {% csrf_token %}
 	<div class="well">
     	<div class="form-actions"><button type="submit" class="pull-right btn btn-primary btn-small">Continue</button></div>
 	</div>
-	</form>
+	</form> -->
 
 {% endblock %}
