--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -22,23 +22,30 @@
 .basket-title {
   clear:both;
   border-bottom:1px solid lighten(@grayLight, 30%);
-  padding-bottom:10px;
-  margin-bottom:10px;
+  padding:10px;
 }
 .basket-items {
   border-bottom:1px solid lighten(@grayLight, 30%);
-  margin-bottom:10px;
+  padding:10px;
   [class*="span"] {
     .image_container {
-      width:75px;
+      height:50px;
+      width:70px;
       float:left;
       margin-right:15px;
     }
+    img {
+      max-height:50px;
+    }
+  }
+  &:nth-child(even) {
+      background:lighten(@grayLighter, 4%);
   }
   .price {
     font-size:@baseFontSize + 2;
     color:@green;
     font-weight:bold;
+    text-align:center;
   }
 }
 
@@ -131,13 +138,7 @@
 }
 
 .total {
-  font-size: @baseFontSize + 3;
-  padding:3px 0px;
-  text-align:right;
-  font-weight:bold;
-  td,th {
-      background-color:#FDF5D9!important;
-  }
+  background-color:#FDF5D9!important;
 }
 
 .checkoutNav ul li {
