--- a/oscar/static/oscar/less/page/product_lists.less
+++ b/oscar/static/oscar/less/page/product_lists.less
@@ -104,8 +104,8 @@
   margin-bottom: @baseLineHeight / 2;
   position:relative;
   img {
-    height:100%;
-    max-width:100%;
+/*    height:100%;*/
+    max-height:125px;
     width:auto;
     margin:0px auto;
   }
