--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -28,10 +28,12 @@ Basket | {{ block.super }}
 {% endif %}
 
 {% if not basket.is_empty %}
-<div class="row-fluid basket-title">
-    <h4 class="span6">Items to buy now</h4>
-    <h4 class="span3">Quantity</h4>
-    <h4 class="span3">Price</h4>
+<div class="basket-title">
+    <div class="row-fluid">
+        <h4 class="span6">Items to buy now</h4>
+        <h4 class="span3">Quantity</h4>
+        <h4 class="span3">Price</h4>
+    </div>
 </div>
 
 <form action="." method="post" class="basket_summary" id="basket_formset">
@@ -39,37 +41,39 @@ Basket | {{ block.super }}
 	{{ formset.management_form }}
 
 	{% for form in formset %}
-    <div class="row-fluid basket-items">
-	    <div class="span6">
-	        {{ form.id }}
-	        {% product_image form.instance.product as product_image %}
-		    <div class="image_container">
-			    <a href="{{ product.get_absolute_url }}">
-			        <img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}">
-			    </a>
-		    </div>
-		    <h4><a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a></h4>
-		    <p class="app-ico instock avaliability ">{{ form.instance.product.stockrecord.availability }}</p>
-	    </div>
-	    <div class="span3">
-		    <div class="checkout-quantity">
-		        {{ form.quantity }} 
-		        <button class="btn">Update</button>
-			    <a href="#" data-id="{{ forloop.counter0 }}" class="inline">Remove</a>
-			    <div style="display:none">
-				    {{ form.save_for_later }}
-				    {{ form.DELETE }}
-			    </div>
-		    </div>
-	    </div>
-	    <div class="span1">
-		    <p class="price">{{ form.instance.unit_price_incl_tax|currency }}<p>
-	    </div>
-	    <div class="span2">
-		    {% if request.user.is_authenticated %}
-		    <a href="#" data-id="{{ forloop.counter0 }}" class="btn btn-info pull-right save" >Save for later</a>
-		    {% endif %}
-	    </div>
+    <div class="basket-items">
+        <div class="row-fluid">
+    	    <div class="span6">
+    	        {{ form.id }}
+    	        {% product_image form.instance.product as product_image %}
+    		    <div class="image_container">
+    			    <a href="{{ product.get_absolute_url }}">
+    			        <img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}">
+    			    </a>
+    		    </div>
+    		    <h4><a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a></h4>
+    		    <p class="app-ico instock avaliability ">{{ form.instance.product.stockrecord.availability }}</p>
+    	    </div>
+    	    <div class="span3">
+    		    <div class="checkout-quantity">
+    		        {{ form.quantity }} 
+    		        <button class="btn">Update</button>
+    			    <a href="#" data-id="{{ forloop.counter0 }}" class="inline">Remove</a>
+    			    <div style="display:none">
+    				    {{ form.save_for_later }}
+    				    {{ form.DELETE }}
+    			    </div>
+    		    </div>
+    	    </div>
+    	    <div class="span1">
+    		    <p class="price">{{ form.instance.unit_price_incl_tax|currency }}<p>
+    	    </div>
+    	    <div class="span2">
+    		    {% if request.user.is_authenticated %}
+    		    <a href="#" data-id="{{ forloop.counter0 }}" class="btn btn-info pull-right save" >Save for later</a>
+    		    {% endif %}
+    	    </div>
+        </div>
     </div>
     {% endfor %}
 </form>
@@ -151,9 +155,9 @@ Basket | {{ block.super }}
 					<th>Shipping ({{ shipping_method.name }})</th>
 					<td>{{ shipping_charge_incl_tax|currency }}</td>
 				</tr>
-				<tr class="total">
-					<th>Order total</th>
-					<td>{{ order_total_incl_tax|currency }}</td>
+				<tr>
+					<th class="total"><h4>Order total</h4></th>
+					<td class="total"><h4>{{ order_total_incl_tax|currency }}</h4></td>
 				</tr>
 				</tbody>
 			</table>
