changed other checkout table into new bootstrap scafold method

--- a/oscar/templates/checkout/payment_details.html
+++ b/oscar/templates/checkout/payment_details.html
@@ -12,6 +12,7 @@ Payment details | {{ block.super }}
 {% block order_contents %}{% endblock %}
 {% block shipping_address %}{% endblock %}
 {% block shipping_method %}{% endblock %}
+{% block payment_method %}{% endblock %}
 
 {% block payment_details %}
 <div class="sub-header">
