--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -14,9 +14,51 @@ Checkout | {{ block.super }}
 
 {% block content %}
 
+<div class="row-fluid">
+	{% block shipping_address %}
+	<div class="span6">
+		<div class="sub-header">
+			<h2>Shipping address</h2>
+		</div>
+		<div class="well well-success">
+			<dl>
+				<dt>Address</dt>
+				<dd>
+					{% for field in shipping_address.active_address_fields %}
+					{{ field }}<br/>
+					{% endfor %}
+				</dd>
+				{% if shipping_address.phone_number %}
+				<dt>Contact number</dt>
+				<dd>{{ shipping_addr.phone_number }}</dd>
+				{% endif %}
+				{% if shipping_address.notes %}
+				<dt>Shipping notes</dt>
+				<dd>{{ shipping_addr.notes }}</dd>
+				{% endif %} 
+			</dl>
+			<div class="alert-actions">
+				<a href="{% url checkout:shipping-address %}" class="btn">Change shipping address</a>
+			</div>
+		</div>
+	</div>
+	{% endblock shipping_address %}
+
+    {% block payment_method %}
+   <div class="span6">
+       <div class="sub-header">
+            <h2>Payment</h2>
+        </div>
+        <div class="well well-info">
+            <p>Payment details to go here</p>
+        </div>    
+    </div>
+     {% endblock payment_method %}
+</div>
+
 {% block order_contents %}
     <div class="sub-header">
-        <h3>Order contents</h3>
+        <h2>Order contents</h2>
     </div>
     <div class="basket-title">
         <div class="row-fluid">
@@ -51,11 +93,22 @@ Checkout | {{ block.super }}
         </div>
     </div>
     {% endfor %}
-    {% if shipping_total_excl_tax %}
+    <!-- {% if shipping_total_excl_tax %}
+        <div class="basket-items">
+            <div class="row-fluid">
+                <h4 class="span11">Shipping charge</h4>
+                <div class="span1">{{ shipping_total_incl_tax|currency }}</div>
+            </div>
+        </div>
+        {% endif %} -->
+    {% if shipping_method %}
     <div class="basket-items">
         <div class="row-fluid">
-            <h4 class="span11">Shipping charge</h4>
-            <div class="span1">{{ shipping_total_incl_tax|currency }}</div>
+            <h4 class="span11">{{ shipping_method.name }}</h4>
+            {{ shipping_method.description }}
+            <div class="span1">
+                {{ shipping_method.basket_charge_incl_tax|currency }}
+            </div>
         </div>
     </div>
     {% endif %}
@@ -76,75 +129,9 @@ Checkout | {{ block.super }}
     </div>
 {% endblock order_contents %}
 
-<div class="sub-header">
-    <h2>Where should we ship to?</h2>
-</div>
-<div class="row-fluid">
-    
-		{% block shipping_address %}
-		<div class="sub-header">
-			<h2>Shipping address</h2>
-		</div>
-		<div class="well well-success">
-			<dl>
-				<dt>Address</dt>
-				<dd>
-					{% for field in shipping_address.active_address_fields %}
-					{{ field }}<br/>
-					{% endfor %}
-				</dd>
-				{% if shipping_address.phone_number %}
-				<dt>Contact number</dt>
-				<dd>{{ shipping_addr.phone_number }}</dd>
-				{% endif %}
-				{% if shipping_address.notes %}
-				<dt>Shipping notes</dt>
-				<dd>{{ shipping_addr.notes }}</dd>
-				{% endif %} 
-			</dl>
-			<div class="alert-actions">
-				<a href="{% url checkout:shipping-address %}" class="btn">Change shipping address</a>
-			</div>
-		</div>
-		{% endblock shipping_address %}
 
-    <!-- <div class="span6">
-            <div class="sub-header">
-                <h2>Payment</h2>
-            </div>
-            <div class="well well-info">
-                <p>Payment details to go here</p>
-            </div>    
-        </div> -->
-</div>
 {% block shipping_method %}
-<div class="sub-header">
-    <h3>Shipping method</h3>
-</div>
-
-{% if shipping_method %}
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Method</th>
-            <th>Cost</th>
-            <th>Description</th>
-            <th></th>
-        </tr>
-    <thead>
-    <tbody>
-        <tr>
-            <td>{{ shipping_method.name }}</td>
-            <td>{{ shipping_method.basket_charge_incl_tax|currency }}</td>
-            <td>{{ shipping_method.description }}</td>
-            <td></td>
-    </tbody>
-</table>
-{% endif %}
 {% endblock shipping_method %}
-
-{% block payment_method %}
-{% endblock payment_method %}
 
 {% block payment_details %}
 {% endblock payment_details %}
