--- a/oscar/templates/checkout/shipping_methods.html
+++ b/oscar/templates/checkout/shipping_methods.html
@@ -11,36 +11,36 @@ Shipping method | {{ block.super }}
 
 {% block order_contents %}{% endblock %}
 {% block shipping_address %}{% endblock %}
+{% block payment_method %}{% endblock %}
 
 {% block shipping_method %}
 <div class="sub-header">
-	<h3>Choose a shipping method</h3>
+	<h2>Choose a shipping method</h2>
 </div>
-
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Method</th>
-            <th>Cost</th>
-            <th>Description</th>
-            <th></th>
-        </tr>
-    <thead>
-    <tbody>
-        {% for method in methods %}
-        <tr>
-            <td>{{ method.name }}</td>
-            <td>{{ method.basket_charge_incl_tax|currency }}</td>
-            <td>{{ method.description }}</td>
-            <td>
-                <form method="post" action="{% url checkout:shipping-method %}">
-                    {% csrf_token %}
-                    <input type="hidden" name="method_code" value="{{ method.code }}" class="btn" />
-                    <button type="submit" class="btn btn-small btn-primary">Use this shipping method</button>
-                </form>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
+<div class="basket-title">
+    <div class="row-fluid">
+        <h4 class="span9">Method</h4>
+        <h4 class="span3">Cost</h4>
+    </div>
+</div>
+{% for method in methods %}
+<div class="basket-items">
+    <div class="row-fluid">
+        <div class="span9">
+            <h4>{{ method.name }}</h4>
+            <p>Description: {{ method.description }}</p>
+        </div>
+        <div class="span1">
+            {{ method.basket_charge_incl_tax|currency }}
+        </div>
+        <div class="span2">
+            <form method="post" action="{% url checkout:shipping-method %}">
+                {% csrf_token %}
+                <input type="hidden" name="method_code" value="{{ method.code }}" class="btn" />
+                <button type="submit" class="btn btn-small btn-primary pull-right">Select option</button>
+            </form>
+        </div>    
+    </div>
+</div>
+{% endfor %}
 {% endblock shipping_method %}
