--- a/oscar/static/oscar/less/page/checkout.less
+++ b/oscar/static/oscar/less/page/checkout.less
@@ -76,7 +76,7 @@
     margin-bottom: @baseLineHeight;
   }
 }
-.choose_shipping_address {
+.choose-block {
   margin-top:10px;
   ul {
     .remove_bullets();
@@ -96,7 +96,7 @@
           position: absolute;
       }
     }
-    .delete_address {
+    .remove-item {
       position:absolute;
       bottom: 10px;
       right: 19px;
@@ -119,22 +119,6 @@
       }
     }
   } 
-}
-
-.choose_card {
-    margin-top: 10px;
-    ul {
-      .remove_bullets();
-      li {
-          width: @third;
-          float: left;
-      }
-    }
-    .well {
-        position: relative;
-        margin: 0 10px 20px;
-        height: 150px;
-    }   
 }
 
 .total {
