--- a/oscar/templates/checkout/checkout.html
+++ b/oscar/templates/checkout/checkout.html
@@ -20,7 +20,7 @@ Checkout | {{ block.super }}
 		<div class="sub-header">
 			<h2>Shipping address</h2>
 		</div>
-		<div class="well well-success">
+		<div class="well well-info">
 			<dl>
 				<dt>Address</dt>
 				<dd>
@@ -49,8 +49,20 @@ Checkout | {{ block.super }}
        <div class="sub-header">
             <h2>Payment</h2>
         </div>
-        <div class="well well-info">
+        <div class="well well-success">
             <p>Payment details to go here</p>
+            <dl>
+                <dt>Credit Card</dt>
+                <dd>
+                    xxxx-xxxx-xxxx-4121<br/>
+                    Visa<br/>
+                    04/13<br/>
+                    Gareth Williams<br/>
+                </dd>
+            </dl>
+            <div class="alert-actions">
+				<a href="/checkout/payment-details/" class="btn">Change credit card details</a>
+			</div>
         </div>    
     </div>
      {% endblock payment_method %}
