--- a/oscar/templates/partials/nav_checkout.html
+++ b/oscar/templates/partials/nav_checkout.html
@@ -1,9 +1,27 @@
-<div id="top_page" class="navbar accounts">
-	<div class="navbar-inner">
-		<div class="container-fluid">
-			<ul class="nav pull-right">
-                <li>&nbsp;</li>
-			</ul>
-		</div>
+<div class="navbar primary">
+    <div class="navbar-inner">
+        <div class="container" style="width: auto;">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </a>
+            <a class="brand hidden" href="{% url promotions:home %}">Oscar</a>
+            <div class="nav-collapse">
+
+                <ul class="nav">
+                   <!-- Links to modal flatpages -->
+                   {% load flatpages %}
+                   {% get_flatpages '/order/' as flatpages %}
+                   {% for page in flatpages %}
+                   <li>
+                      <a data-toggle="modal" href="#{{ page.title|slugify }}">{{ page.title }}</a>
+                   </li>
+                   {% endfor %}
+                   <!-- Delete this if other links present -->
+                   <li><a href="/">&larr;</a></li>
+                </ul>
+            </div><!-- /.nav-collapse -->
+        </div>
     </div><!-- /navbar-inner -->
 </div><!-- /navbar -->
