added some mixins clears to some checkout floats

--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -166,7 +166,7 @@ Basket | {{ block.super }}
 </div>
 
 	
-	<div class="form-actions clearfix" >
+	<div class="form-actions" >
 		<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
 	</div>
 
