--- a/oscar/static/oscar/css/styles.css
+++ b/oscar/static/oscar/css/styles.css
@@ -787,6 +787,14 @@ input:focus:required:invalid:focus, textarea:focus:required:invalid:focus, selec
   margin-bottom: 18px;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
+  *zoom: 1;
+}
+.form-actions:before, .form-actions:after {
+  display: table;
+  content: "";
+}
+.form-actions:after {
+  clear: both;
 }
 .uneditable-input {
   display: block;
@@ -3142,10 +3150,18 @@ body {
 .choose-block ul {
   margin: 0px;
   padding: 0px;
+  *zoom: 1;
 }
 .choose-block ul li {
   padding: 0px;
   list-style: none;
+}
+.choose-block ul:before, .choose-block ul:after {
+  display: table;
+  content: "";
+}
+.choose-block ul:after {
+  clear: both;
 }
 .choose-block ul li {
   width: 33.33333333333333%;
