--- a/oscar/static/oscar/less/bootstrap/forms.less
+++ b/oscar/static/oscar/less/bootstrap/forms.less
@@ -325,6 +325,7 @@ select:focus:required:invalid {
   margin-bottom: @baseLineHeight;
   background-color: #f5f5f5;
   border-top: 1px solid #ddd;
+  .clearfix();
 }
 
 // For text that needs to appear as an input but should not be an input
