Fixed basket regression where a CSS class was removed

--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -58,7 +58,7 @@ Basket | {{ block.super }}
     		    <div class="checkout-quantity">
     		        {{ form.quantity }} 
     		        <button class="btn">Update</button>
-    			    <a href="#" data-id="{{ forloop.counter0 }}" class="inline">Remove</a>
+    			    <a href="#" data-id="{{ forloop.counter0 }}" class="inline remove">Remove</a>
     			    <div style="display:none">
     				    {{ form.save_for_later }}
     				    {{ form.DELETE }}
