--- a/oscar/templates/customer/order-history.html
+++ b/oscar/templates/customer/order-history.html
@@ -1,6 +1,20 @@
 {% extends "layout.html" %}
 {% load currency_filters %}
 
+{% block breadcrumbs %}
+<ul class="breadcrumb">
+    <li>
+        <a href="{% url promotions:home %}">Home</a>
+        <span class="divider">/</span>
+    </li>
+    <li>
+        <a href="{% url customer:summary %}">Account</a>
+        <span class="divider">/</span>
+    </li>
+	<li class="active"><a href=".">Order history</a></li>
+</ul>
+{% endblock %}
+
 {% block title %}
 Order history | {{ block.super }}
 {% endblock %}
@@ -10,7 +24,6 @@ Order history | {{ block.super }}
     <h2>Order history</h2>
 </div>
 {% endblock header %}
-
 
 {% block content %}
 
