--- a/oscar/templates/layout.html
+++ b/oscar/templates/layout.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% load currency_filters %}
 {% load category_tags %}
 
@@ -17,18 +16,13 @@
         {% include "partials/nav_primary.html" %}
     </header><!-- /header -->
     <div class="container-fluid page">
+		{% block breadcrumbs %}{% endblock %}
         {% include "partials/alert_messages.html" %}
         {% block header %}
         {% endblock %}
         <div class="page_inner">	
-        	{% block breadcrumbs %}
-            {% endblock %}
-
-            {% block flatpage %}
-            {% endblock %}
-           
-        	{% block content %} 
-        	{% endblock %}
+            {% block flatpage %}{% endblock %}
+			{% block content %}{% endblock %}
     	</div><!-- /page_inner -->
     </div><!-- /container-fluid -->
     {% include "partials/footer.html" %}
